# libsettings

./: BUILD  CMakeLists.txt  CONTRIBUTING.md  Makefile  NOTICE  README.md  WORKSPACE  build_with_spack_cmake.sh  libsettings.pc.in
src/settings/: Settings.cc  Settings.h  Settings_TEST.cc  settings.cc  settings.h  settings_TEST.cc
